{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 111,
  "lineage": "8960136b-2f3e-fcf9-91b7-449ce5944b04",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:132426969579:loadbalancer/tf-lb-20190628111226805000000001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20190628111226805000000001-1160879308.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20190628111226805000000001",
            "idle_timeout": 60,
            "instances": [
              "i-01669e56893a1de82",
              "i-03905260ee0cdd85f"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20190628111226805000000001",
            "security_groups": [
              "sg-02eb13a6f38bb3a7b"
            ],
            "source_security_group": "132426969579/nginx_elb_sg",
            "source_security_group_id": "sg-02eb13a6f38bb3a7b",
            "subnets": [
              "subnet-0df10596b2e431443",
              "subnet-0e71bce48da829dc1"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-c58c1dd3",
            "arn": "arn:aws:ec2:us-east-1:132426969579:instance/i-03905260ee0cdd85f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03905260ee0cdd85f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraUser_Key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a16e38d0bbd9e7ff",
            "private_dns": "ip-10-1-1-7.ec2.internal",
            "private_ip": "10.1.1.7",
            "public_ip": "34.230.57.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0b021468d5c86bce6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df10596b2e431443",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eba4e8e5066afb8c"
            ]
          },
          "depends_on": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-c58c1dd3",
            "arn": "arn:aws:ec2:us-east-1:132426969579:instance/i-01669e56893a1de82",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01669e56893a1de82",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TerraUser_Key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c579eb1dbba17bd1",
            "private_dns": "ip-10-1-2-198.ec2.internal",
            "private_ip": "10.1.2.198",
            "public_ip": "34.200.247.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-00696a5743c210f5e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e71bce48da829dc1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eba4e8e5066afb8c"
            ]
          },
          "depends_on": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d2bf579c11485e10",
            "owner_id": "132426969579",
            "vpc_id": "vpc-0658d25c892fcbc14"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00c86a451ce37fe98",
            "owner_id": "132426969579",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2bf579c11485e10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0658d25c892fcbc14"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045f79e24d2e7dd0a",
            "route_table_id": "rtb-00c86a451ce37fe98",
            "subnet_id": "subnet-0df10596b2e431443"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0461d06d798ac37a6",
            "route_table_id": "rtb-00c86a451ce37fe98",
            "subnet_id": "subnet-0e71bce48da829dc1"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132426969579:security-group/sg-02eb13a6f38bb3a7b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02eb13a6f38bb3a7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": null,
            "owner_id": "132426969579",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0658d25c892fcbc14"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132426969579:security-group/sg-0eba4e8e5066afb8c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eba4e8e5066afb8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": null,
            "owner_id": "132426969579",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0658d25c892fcbc14"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132426969579:subnet/subnet-0df10596b2e431443",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0df10596b2e431443",
            "map_public_ip_on_launch": true,
            "owner_id": "132426969579",
            "vpc_id": "vpc-0658d25c892fcbc14"
          },
          "depends_on": [
            "data.aws_availability_zones.available",
            "module.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132426969579:subnet/subnet-0e71bce48da829dc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0e71bce48da829dc1",
            "map_public_ip_on_launch": true,
            "owner_id": "132426969579",
            "vpc_id": "vpc-0658d25c892fcbc14"
          },
          "depends_on": [
            "data.aws_availability_zones.available",
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132426969579:vpc/vpc-0658d25c892fcbc14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03dee31d0b961ff60",
            "default_route_table_id": "rtb-09d724b0e31749c72",
            "default_security_group_id": "sg-069ebe89855ffd61a",
            "dhcp_options_id": "dopt-f3dded88",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0658d25c892fcbc14",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d724b0e31749c72",
            "owner_id": "132426969579"
          }
        }
      ]
    }
  ]
}